# text_power_raw

./: .gitignore  README.md  pyproject.toml
notebooks/: analyze_emgeddings.ipynb  bert_embeddings.ipynb  create_alpha_datasets.py  gensim_requirements.txt  gpt_embeddings.ipynb  plot_total_embeddings.ipynb  plot_wikitext-alpha_embeddings.ipynb  simces_embeddings.ipynb  tfidf_embeddings.ipynb  w2v_embeddings.py  zipf_law.ipynb
notebooks/gensim_embeddings/: train_wikitext_w2v.py  w2v-alpha_embeddings.py  w2v_embeddings.py  word2vec_embeddings.ipynb
