[tool.poetry]
name = "text-power-raw"
version = "0.1.0"
description = ""
authors = ["kenta.shinzato <hoppiece@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
jupyter = "^1.0.0"
jupyterlab = "^4.2.4"
scikit-learn = "^1.5.1"
numpy = "^2.1.0"
transformers = "^4.44.1"
torch = "^2.4.0"
datasets = "^2.21.0"
scipy = "^1.14.1"
japanize-matplotlib = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
